--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.To_Yu_App" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Theme.ListaAttivita" parent="Theme.AppCompat.Light.DarkActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/verde_principale</item>
+        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorSecondary">@color/blu_principale</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/verde_principale</item>
+        <!-- Customize your theme here. -->
     </style>
-
-    <style name="Theme.To_Yu_App" parent="Base.Theme.To_Yu_App" />
 </resources>
